...
    <string name="email_required">Email is required</string>
    <string name="email_formatted_incorrectly">Email formatted incorrectly</string>
    <string name="user_created">User created</string>
    <string name="password_required">Password is required</string>
    <string name="password_too_short">Password needs to be atleast 8 characters</string>
    <string name="password_not_match">Password doesnt match</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="user_already_exists">User already exists</string>
    <string name="login">Login</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string name="Translate" translatable="false">Translate</string>
    <string name="text_to_speech" translatable="false">Text To Speech</string>
    <string name="common_phrases" translatable="false">Common phrases</string>
    <string name="dashboard">Dashboard</string>
...
